--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bears-bot",
   "version": "0.1.1",
-  "description": "Project for learning bot",
+  "description": "Project for learning to create bots",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
