--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Daniel Saavedra",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
