--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project for learning to create bots",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Saavedra",
