Moved dotenv to regular dependency list

--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "node-fetch": "^2.6.1"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
   }
 }
